# hoibe

./: .gitignore  Package.resolved  Package.swift  README.md  _debug_clip.py  _probe.py  hoibe.yaml  lastenheft_ollama_erster_schluck.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: ollama-qwen3-vl.instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
Hoibe.xcodeproj/: project.pbxproj
Hoibe.xcodeproj/xcshareddata/xcschemes/: Hoibe.xcscheme
ios/Hoibe/: Info.plist
ios/Hoibe/App/: BundleCompat.swift  CameraView.swift  ContentView.swift  HoibeApp.swift
ios/Hoibe/Models/: AnalysisResult.swift  AnalysisState.swift  BeerFillLevel.swift  ChatMessage.swift  FrameData.swift  (+2 more)
ios/HoibeTests/: ResultParsingTests.swift
prompts/v1/: system_prompt.txt  user_prompt_template.txt
prompts/v2/: fill_level_prompt.txt  system_prompt.txt  user_prompt_template.txt
prompts/v3/: user_prompt_template.txt
specs/001-ollama-first-sip-detection/: plan.md  spec.md  tasks.md
specs/002-ios-on-device/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  analyzer.py  cli.py  config.py  frame_extractor.py  ollama_client.py  prompt_engine.py  result_parser.py  schemas.py
tests/: conftest.py  test_analyzer_e2e.py  test_analyzer_integration.py  test_cli.py  test_frame_extractor.py  test_ollama_client.py  test_prompt_engine.py  test_result_parser.py
(+22 files in other folders)
