[project]
name = "hoibe"
version = "0.1.0"
description = "Local first-sip detection from video clips using Ollama VLM"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "opencv-python>=4.8.0",
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
hoibe = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-dotenv>=0.5",
    "syrupy>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
env_files = [".env"]
markers = [
    "integration: tests that exercise multiple pipeline components together",
    "e2e: tests that run against a live Ollama instance and real fixture videos",
]
